--- a/src/css/mapbox-gl.css
+++ b/src/css/mapbox-gl.css
@@ -5,8 +5,8 @@
     -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 .mapboxgl-map:-webkit-full-screen {
-    width: 100%;
-    height: 100%;
+    width: 100% !important;
+    height: 100% !important;
 }
 
 .mapboxgl-missing-css {
