--- a/src/css/layers.css
+++ b/src/css/layers.css
@@ -7,7 +7,7 @@
 .map {
 	/*margin:1% 0 0 0;*/
 	position: absolute;
-	width: 99%;
+	width: 95% !important;
 	height: 80%;
 	border: black;
 	top: auto !important;
