--- a/src/css/layers.css
+++ b/src/css/layers.css
@@ -30,10 +30,9 @@
 
 .left-nav {
 	position: absolute;
-	top: 0;
+	top: 12%;
 	left: 0;
 	width: 30%;
-	background-color: #f1f1f1; 
 	transform: translate(0%, 0px);
 	transition: all 0.5s ease-out;
 	overflow: hidden;
@@ -46,7 +45,14 @@
 }
 
 .nav--active {
-	transform: translate(-100%, 0%);
+	transform: translate(-85%, 0%);
+}
+
+.nav-content {
+	float: left;
+	width: 85%;
+	height: 100%;
+	background-color: #f1f1f1; 
 }
 
 #nav-all-layers {
@@ -267,3 +273,81 @@
     	margin: 1% 4% 0 0;
     	height: 2em;
 }
+
+/*---------------------------------------------------------------------------------*/
+
+/*Hamburger CSS*/
+/*!
+ * Hamburgers
+ * @description Tasty CSS-animated hamburgers
+ * @author Jonathan Suh @jonsuh
+ * @site https://jonsuh.com/hamburgers
+ * @link https://github.com/jonsuh/hamburgers
+ */
+.hamburger {
+  width: 15%;
+  padding: 2%;
+  display: inline-block;
+  cursor: pointer;
+  transition-property: opacity, filter;
+  transition-duration: 0.15s;
+  transition-timing-function: linear;
+  font: inherit;
+  color: inherit;
+  text-transform: none;
+  background-color: #f1f1f1;
+  border: solid black 1px;
+  margin: 0;
+  overflow: visible; }
+  .hamburger:hover {
+    opacity: 0.7; }
+
+.hamburger-box {
+  width: 40px;
+  height: 24px;
+  display: inline-block;
+  position: relative; }
+
+.hamburger-inner {
+  display: block;
+  top: 50%;
+  margin-top: -2px; }
+  .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
+    width: 40px;
+    height: 4px;
+    background-color: #000;
+    border-radius: 4px;
+    position: absolute;
+    transition-property: transform;
+    transition-duration: 0.15s;
+    transition-timing-function: ease; }
+  .hamburger-inner::before, .hamburger-inner::after {
+    content: "";
+    display: block; }
+  .hamburger-inner::before {
+    top: -10px; }
+  .hamburger-inner::after {
+    bottom: -10px; }
+
+/*
+   * Arrow
+   */
+.hamburger--arrow.is-active .hamburger-inner::before {
+  transform: translate3d(-8px, 0, 0) rotate(-45deg) scale(0.7, 1); }
+
+.hamburger--arrow.is-active .hamburger-inner::after {
+  transform: translate3d(-8px, 0, 0) rotate(45deg) scale(0.7, 1); }
+
+/*
+   * Arrow Right
+   */
+.hamburger--arrow-r.is-active .hamburger-inner::before {
+  transform: translate3d(8px, 0, 0) rotate(45deg) scale(0.7, 1); }
+
+.hamburger--arrow-r.is-active .hamburger-inner::after {
+  transform: translate3d(8px, 0, 0) rotate(-45deg) scale(0.7, 1); }
+
+
+
+
+
