--- a/src/css/layers.css
+++ b/src/css/layers.css
@@ -83,6 +83,7 @@
 	/*background-color: white;*/
 	margin: 2% 0% 2% 0%;
 	/*padding: 1% 1% 1% 1%;*/
+	color: black;
 }
 
 .no-select {
@@ -348,7 +349,14 @@
 .hamburger--arrow-r.is-active .hamburger-inner::after {
   transform: translate3d(8px, 0, 0) rotate(-45deg) scale(0.7, 1); }
 
+/*-----------------------------------------------------------------------------*/
 
+.layer-styler-controls {
+    width: 100%;
+    height: 2em;
+}
 
-
-
+.legend-div {
+    margin-top: 2%;
+    cursor: pointer;
+}
