--- a/lib/css/layers.css
+++ b/lib/css/layers.css
@@ -5,10 +5,9 @@
 }
 
 .map {
-	/*margin:1% 0 0 0;*/
 	position: absolute;
-	width: 95% !important;
-	height: 80%;
+	width: 100% !important;
+	height: 100%;
 	border: black;
 	top: auto !important;
 	bottom: auto !important;
@@ -41,10 +40,10 @@
 .features-nav {
 	float: right;
 	position: relative;
-	top: 2%;
+	top: 0%;
 	right: 0;
 	width: 30%;
-	transform: translate(45%, 0px);
+	transform: translate(43%, 0px);
 	transition: all 0.5s ease-out;
 	overflow: hidden;
 	z-index: 20;
@@ -57,7 +56,7 @@
 }
 
 .nav--active {
-	transform: translate(-95%, 0%);
+	transform: translate(-85%, 0%);
 }
 
 .features-nav--active {
@@ -72,7 +71,7 @@
 }
 
 #nav-all-layers {
-	height: 90%;
+	height: 93%;
 	overflow-y: scroll;
 }
 
@@ -87,8 +86,8 @@
 }
 
 .fill-height {
-	min-height: 90%;
-	height: 90%;
+	min-height: 95%;
+	height: 95%;
 }
 
 .layer-name-div {
@@ -117,7 +116,7 @@
 }
 
 .layer-div {
-	width: 97%;
+	width: 93%;
 	background-color: white;
 	margin: 2% 1% 1% 2%;
 	padding: 1% 2% 1% 2%;
@@ -164,6 +163,7 @@
 /* Style for tabbed pane */
 /* Style the tab */
 .tab {
+    height: 7%;
     overflow: hidden;
     border: 1px solid #ccc;
     background-color: #f1f1f1;
@@ -218,7 +218,8 @@
 .slidecontainer {
     width: 32%; /* Width of the outside container */
     float: left;
-    margin: 2% 0 0 0;
+    margin: 3% 0 0 0;
+    padding-left: 0%;
 }
 
 .slidercontainer input {
@@ -273,7 +274,7 @@
     cursor: pointer;
     opacity: 0.5;
     margin: 0% 0 0 1%;
-    padding: 0% 4% 0 6%;
+    padding: 0% 2% 0 6%;
     float: left;
     border-right: solid 1px;
     font-size: 14px;
@@ -376,4 +377,9 @@
 .legend-div {
     margin-top: 2%;
     cursor: pointer;
+}
+
+.mapboxgl-ctrl-top-right {
+    top: 8% !important;
+    right: 0;
 }
