--- a/src/css/layers.css
+++ b/src/css/layers.css
@@ -42,6 +42,7 @@
 	position: relative;
 	top: 0%;
 	right: 0;
+	left: 0.5%;
 	width: 30%;
 	transform: translate(43%, 0px);
 	transition: all 0.5s ease-out;
@@ -289,7 +290,7 @@
 	position: relative;
 	z-index: 10; /* This should always be higher than mapbox-gl map canvas*/
 	float: right;
-    	margin: 1% 4% 0 0;
+    	margin: 1% 4.5% 0 0;
     	height: 2em;
 }
 
@@ -381,5 +382,6 @@
 
 .mapboxgl-ctrl-top-right {
     top: 8% !important;
+    right: 4% !important;
     right: 0;
 }
