changed background color for upload form

--- a/src/css/layers.css
+++ b/src/css/layers.css
@@ -397,6 +397,10 @@
 }
 
 /*---------------- New layer Panel ----------------------*/
+#add-layer-component {
+    background-color: white;
+}
+
 .add-layer-panel {
 	margin: 2%;
 }
