--- a/lib/css/layers.css
+++ b/lib/css/layers.css
@@ -397,6 +397,10 @@
 }
 
 /*---------------- New layer Panel ----------------------*/
+#add-layer-component {
+    background-color: white;
+}
+
 .add-layer-panel {
 	margin: 2%;
 }
@@ -416,6 +420,7 @@
 
 #metadata-component input {
 	width: 100%;
+	margin: 2% 0% 2% 0%;
 }
 
 .dbf-table {
@@ -445,5 +450,26 @@
 
 th {
 	padding: 15px;
+}
+
+#dbf-data-table td input {
+    width: 90%;
+    margin-top: 5%;
+    margin-left: 5%;
+    margin-bottom: 5%;
+}
+
+.loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 /*-------------------------------------------------------*/
