--- a/src/css/layers.css
+++ b/src/css/layers.css
@@ -418,7 +418,7 @@
 	border: none;
 }
 
-#metadata-component input {
+#metadata-table input {
 	width: 100%;
 	margin: 2% 0% 2% 0%;
 }
@@ -472,4 +472,31 @@ th {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+fieldset {
+    margin: 0 0 1% 0;
+    padding: 0 1% 1% 1%;
+    border: 1px solid black;
+}
+
+.style-legend {
+    width: auto;
+    margin-bottom: 0;
+    padding: 1%;
+    border: none;
+}
+
+input[type=radio] {
+    margin: 0 0.5% 0 0;
+}
+
+input[type=file] {
+    border: 1px solid lightgrey;
+    margin-left: 1.5%;
+}
+
+.data-type-input {
+    margin: 0 0 0 2% !important;
+}
+
 /*-------------------------------------------------------*/
